# cutecom-ng

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  ReadMeOld.md  ReadMe_zh.md  Version.h  Version.h.in  aboutdialog.cpp  aboutdialog.ui  connectdialog.cpp  connectdialog.h  connectdialog.ui  cutecom-ng.desktop  cutecom-ng.pro  cutecom-ng.qrc  en_US.ts  filetransfer.cpp  hexlistitem.cpp  hexlistitem.h  hexlistitem.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusrtudialog.cpp  modbusrtudialog.h  modbusrtudialog.ui  modbusrtuwritedatadialog.cpp  modbusrtuwritedatadialog.h  modbusrtuwritedatadialog.ui  modbussessionmanager.cpp  modbussessionmanager.h  nulltransfer.cpp  nulltransfer.h  pluginmanager.cpp  pluginmanager.h  pluginmanager.ui  qqmlloader.cpp  qqmlloader.h  (+10 more)
cmake/: components.cmake
components/QVTerminal/: CMakeLists.txt  QVTerminal.pri
components/modbus/: CMakeLists.txt  modbus.pri
components/qhexedit/: CMakeLists.txt  qhexedit.pri
components/scintilla/: CMakeLists.txt  scintilla.pri
components/xmodem/: CMakeLists.txt  xmodem.pri
doc/: ReadMeOld.md
libs/QVTerminal/src/: qvterminal.cpp  qvterminal.h  qvtlayout.cpp  qvtline.cpp  qvtline.h
libs/scintilla/: CMakeLists.txt  scintilla.pri
libs/scintilla/scintilla/src/: ScintillaBase.cxx
script/qml/: ReadMe.md  template-qt6.qml  template-qt6.qmlscript  template.qml  template.qmlscript
win32/: CMakeInstall.txt  CMakeInstall_Qt6.txt  Version.h  windeployqt.cmake.in  window_resources.manifest  window_resources.rc  window_resources_msvc.rc
win32/dummyqml/qt5/: dummy.qml
win32/dummyqml/qt6/: dummy.qml
win32/nsis/: LICENSE.txt  README.txt  WELCOME.txt
